--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -69,7 +69,7 @@
                 }
                 // receiver stack
                 for (let i = 0; i < receiverGets; i++) {
-                    $(`.coinstackR[data-index="${index}"]`).append('<div class="coin" style="left:83%;"></div>');
+                    $(`.coinstackR[data-index="${index}"]`).append('<div class="coinR" style="left:50%;"></div>');
                 }
                 // number labels
                 $('#countD[data-index="' + index + '"]').text(`${dictatorKeeps}`);
@@ -87,7 +87,7 @@
                 }
                 // receiver stack
                 for (let i = 0; i < receiver_endowment; i++) {
-                    $('.coinstackR').append('<div class="coin" style="left:83%;"></div>');
+                    $('.coinstackR').append('<div class="coinR" style="left:50%;"></div>');
                 }
                 // number labels
                 $('#countD').text(`${total_endowment}`);
@@ -157,7 +157,7 @@
 
                 // Add the specified number of coins
                 for (let i = 0; i < Rupdate; i++) {
-                    $('.coinstackR').append('<div class="coin" style="left:83%;"></div>');
+                    $('.coinstackR').append('<div class="coinR" style="left:50%;"></div>'); // previously: left:83
                 }
 
                 for (let i = 0; i < Dupdate; i++) {
@@ -383,6 +383,18 @@
         transform: translateX(-50%);
     }
 
+    .coinR {
+        width: 1.8vw; /* Coins take the full width of the stack container */
+        min-width:10px;
+        height: 8px; /* Coin height is proportional to the width */
+        border-radius: 50%;
+        background: linear-gradient(145deg, #ffd700, #e6c200);
+        border: 0.1vw solid #FFFFFF; /* Border size scales with the coin size */
+        box-shadow: inset -3px -2px 5px rgba(0, 0, 0, 0.2);
+        position: absolute;
+        transform: translateX(-50%);
+    }
+
     .coinown {
         width: 1.8vw; /* Coins take the full width of the stack container */
         min-width:10px;
@@ -419,9 +431,9 @@
     font-size: 1.2rem;
     color: #333; /* Adjust color as needed */
     position: absolute; /* Position relative to .container */
-    left: 73%; /* Center horizontally */
+    left: 60%; /* Center horizontally, previously 73 */
     transform: translateX(-50%); /* Adjust for exact centering */
-    top: 32%; /* Move up; adjust value as needed */
+    top: 13%; /* Move up; adjust value as needed */
     text-align: center; /* Align text */
 }
 
@@ -476,6 +488,19 @@
     .coin:nth-child(2)   { top: 9.0vw; }
     .coin:nth-child(1)   { top: 9.3vw; }
 
+    .coinR:nth-child(12)  { top: 1.0vw; }
+    .coinR:nth-child(11)  { top: 1.3vw; }
+    .coinR:nth-child(10)  { top: 1.6vw; }
+    .coinR:nth-child(9)   { top: 1.9vw; }
+    .coinR:nth-child(8)   { top: 2.2vw; }
+    .coinR:nth-child(7)   { top: 2.5vw; }
+    .coinR:nth-child(6)   { top: 2.8vw; }
+    .coinR:nth-child(5)   { top: 3.1vw; }
+    .coinR:nth-child(4)   { top: 3.4vw; }
+    .coinR:nth-child(3)   { top: 3.7vw; }
+    .coinR:nth-child(2)   { top: 4.0vw; }
+    .coinR:nth-child(1)   { top: 4.3vw; }
+
     .coinown:nth-child(10)  { top: 20.6vw; left:58% }
     .coinown:nth-child(9)   { top: 20.9vw; left:58% }
     .coinown:nth-child(8)   { top: 21.2vw; left:58% }
@@ -518,14 +543,22 @@
              data-index="{{ dic_norm_decision.index }}">
 
             {% if dic_identity != "baseline"%}
-                <img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
-                <img src="" style='width:50%; position:absolute; left:16vw' class='receiverCountry'>
+                <img src="" style='width:50%; position:absolute; right:17.5vw' class='dictatorCountry'>
+                <img src="" style='width:50%; position:absolute; left:17.8vw' class='receiverCountry'>
 
                 <img src="" style='width:50%; position:absolute; top:7vw; right:22vw' class='dictatorCountryMap'>
                 <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'>
             {% endif %}
 
             <img src="/static/{{ image }}" style="width:27vw; position:absolute; left:-25%; top:3vw">
+
+            <p>
+                <b style="position: absolute; top: 60%; left:-25%;">PERSON A</b>
+            </p>
+
+            <p>
+                <b style="position: absolute; top: 60%; right:-27%;">PERSON B</b>
+            </p>
 
             <span class='coinstack coinstackD' data-index="{{ dic_norm_decision.index }}"></span>
             <div class="coin-count-labelD" id="countD"
@@ -534,7 +567,7 @@
 
             <span class='coinstack coinstackR' data-index="{{ dic_norm_decision.index }}"></span>
             <div class="coin-count-labelR" id="countR"
-                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 55%;{% endif %}"
+                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 20%;{% endif %}"
                  data-index="{{ dic_norm_decision.index }}"></div>
 
             {% if "3PP" in player.treatment or player.treatment in C.COUNTRY_LIST %}
@@ -551,6 +584,16 @@
 
             {% if "2PP" in player.treatment %}
                 <img src="/static/global/minus_button.png" alt="-" style="position: absolute; width: 2vw; top: 5%; left: 46%;">
+            {% endif %}
+
+            {% if "2PP" in player.treatment or "0DG" in player.treatment %}
+                <p>
+                    <b style="color: red; font-size: 24px; position: absolute; top: 43%; left:-18%;">YOU</b>
+                </p>
+            {% else %}
+                <p>
+                    <b style="color: red; font-size: 24px; position: absolute; top: 26%; left:-18%;">YOU</b>
+                </p>
             {% endif %}
 
 
@@ -582,14 +625,42 @@
 
 
             {% if dic_identity != "baseline"%}
-                <img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
-                <img src="" style='width:50%; position:absolute; left:16vw' class='receiverCountry'>
+                <img src="" style='width:50%; position:absolute; right:17.5vw' class='dictatorCountry'>
+                <img src="" style='width:50%; position:absolute; left:17.8vw' class='receiverCountry'>
 
                 <img src="" style='width:50%; position:absolute; top:7vw; right:22vw' class='dictatorCountryMap'>
                 <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'>
+
             {% endif %}
 
             <img src="/static/{{ image }}" style="width:27vw; position:absolute; left:-25%; top:3vw">
+
+            {% if "0DG" in player.treatment or "2PP" in player.treatment %}
+                <p>
+                    <b style="position: absolute; top: 60%; left:-25%;">PERSON A</b>
+                </p>
+
+                <p>
+                    <b style="position: absolute; top: 60%; right:-27%;">PERSON B</b>
+                </p>
+
+            {% else %}
+
+                <p>
+                <b style="position: absolute; top: 36%; left:-25%;">PERSON A</b>
+                </p>
+
+                <p>
+                    <b style="position: absolute; top: 36%; right:-27%;">PERSON B</b>
+                </p>
+
+                {% if "3PP" in player.treatment or "3PR" in player.treatment or "3PC" in player.treatment %}
+                    <p>
+                        <b style="position: absolute; top: 85%; left:40%;">PERSON C</b>
+                    </p>
+                {% endif %}
+
+            {% endif %}
 
             <span class='coinstack coinstackD'></span>
             <div class="coin-count-labelD" id="countD"
@@ -597,7 +668,7 @@
 
             <span class='coinstack coinstackR'></span>
             <div class="coin-count-labelR" id="countR"
-                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 55%;{% endif %}"></div>
+                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 20%;{% endif %}"></div>
 
             {% if "3PP" in player.treatment or player.treatment in C.COUNTRY_LIST %}
                 <img src="/static/global/minus_button.png" alt="-" style="position: absolute; width: 2vw; top: 55%; left: 12%;">
@@ -613,6 +684,16 @@
 
             {% if "2PP" in player.treatment %}
                 <img src="/static/global/minus_button.png" alt="-" style="position: absolute; width: 2vw; top: 5%; left: 46%;">
+            {% endif %}
+
+            {% if "2PP" in player.treatment or "0DG" in player.treatment %}
+                <p>
+                    <b style="color: red; font-size: 24px; position: absolute; top: 43%; left:-18%;">YOU</b>
+                </p>
+            {% else %}
+                <p>
+                    <b style="color: red; font-size: 24px; position: absolute; top: 26%; left:-18%;">YOU</b>
+                </p>
             {% endif %}
 
         </div>
