punishment/rewarding points to 12 with TP effectiveness to 1 (basically no multiplier anymore but keep the code)

--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -229,7 +229,7 @@
             // deactive punishment that would generate negative values
             let numbersToDisable = [];
             TP_decisions.forEach(TP_decision => {
-                DPpossible = Math.ceil(TP_decision.dictator_keeps / 3);
+                DPpossible = Math.ceil(TP_decision.dictator_keeps / TP_eff);
                 for (let i = DPpossible + 1; i <= TP_points; i++) {
                     numbersToDisable.push(i);
                 }
