universal norm part one

--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -1102,7 +1102,7 @@
 
                 <div class='numbers'>
                     <div class="number-row" data-index="{{ TP_decision.index }}" data-input="selected-number-{{ TP_decision.index }}">
-                        {{ for num in TP_points }}
+                        {{ for num in TP_eff }}
                         <div class="number" data-value="{{ num }}" data-index="{{ TP_decision.index }}">{{ num }}</div>
                         {{ endfor }}
                     </div>
